The new font has a slightly different height. Chaging styles to fix alignment // #208

--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -583,7 +583,7 @@ table td .left { text-align: left; }
         font-size: 0.6em;
 
         padding-top: 4px;
-        padding-right: 5px;
+        padding-right: 7px;
     }
     div.postDate
     {
@@ -638,6 +638,10 @@ table td .left { text-align: left; }
         div.postNumber
         {
             padding-left: 7px;
+        }
+        h2
+        {
+            padding-top: 2px;
         }
     }
 
