--- a/web/layout/secondary.less
+++ b/web/layout/secondary.less
@@ -264,6 +264,8 @@ div.postLink
     {
         font-family: @font2;
         font-size: 1.1em;
+
+        padding-top: 2px;
     }
     div.postDate
     {
